syntax = "proto3";

package pokedex;

message Error {
    int32 code = 1;
    string message = 2;
}

enum PokemonType {
    NORMAL = 0;
    FIRE = 1;
    GROUND = 2;
    WATER = 3;
    GRASS = 4;
    PSYCHIC = 5;
    GHOST = 6;
    ICE = 7;
    STEEL = 8;
    POISON = 9;
    FLYING = 10;
    FIGHTING = 11;
    ELECTRIC = 12;
}

message Query {
    string value = 1;
}

message Pokemon {
    string name = 1;
    repeated PokemonType pokemonType = 2;
}

message PokemonResponse {
    int32 id = 1;
    string name = 2;
    repeated PokemonType pokemonType = 3;
}

message PokemonsResponse {
    repeated PokemonResponse pokemons = 1;
}

message PokedexEntryResponse {
    int32 id = 1;
}

service PokeDex {
    rpc GetPokemonByName(Query) returns (PokemonResponse);
    rpc GetPokemonsByType(Query) returns (PokemonsResponse);
    rpc MakePokedexEntry(Pokemon) returns (PokedexEntryResponse);
}
